-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.0, Lustre 2.5.0
-
3
-
7058
To reproduce start racer and run
while true; do cat /proc/fs/lustre/llite/*/dump_page_cache > /dev/null; done
crash> bt -l
PID: 8892 TASK: ffff880118dc8080 CPU: 1 COMMAND: "cat"
#0 [ffff88013a59b920] machine_kexec at ffffffff81031f7b
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/kernel/machine_kexec_64.c: 336
#1 [ffff88013a59b980] crash_kexec at ffffffff810b8c22
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/kernel/kexec.c: 1106
#2 [ffff88013a59ba50] oops_end at ffffffff814eef80
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/kernel/dumpstack.c: 242
#3 [ffff88013a59ba80] no_context at ffffffff81042a0b
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/mm/fault.c: 698
#4 [ffff88013a59bad0] __bad_area_nosemaphore at ffffffff81042c95
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/mm/fault.c: 764
#5 [ffff88013a59bb20] bad_area at ffffffff81042dbe
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/mm/fault.c: 793
#6 [ffff88013a59bb50] __do_page_fault at ffffffff81043570
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/mm/fault.c: 1140
#7 [ffff88013a59bc70] do_page_fault at ffffffff814f0f5e
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/mm/fault.c: 1208
#8 [ffff88013a59bca0] page_fault at ffffffff814ee315
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86_64/kernel/entry.S
[exception RIP: vvp_pgcache_show+263]
RIP: ffffffffa0df5ab7 RSP: ffff88013a59bd58 RFLAGS: 00010246
RAX: ffff88010f064ac0 RBX: ffffea00039cdd28 RCX: 0000000000000000
RDX: 0000000000000000 RSI: ffffffffa0e02b12 RDI: ffff88010f064a00
RBP: ffff88013a59be18 R8: 00000000fffffffb R9: 00000000000035bb
R10: 0000000000000002 R11: 000000000000000f R12: ffff880132b22440
R13: ffff88015b589db8 R14: ffff88014ff48948 R15: ffff88010f064a00
ORIG_RAX: ffffffffffffffff CS: 0010 SS: 0018
#9 [ffff88013a59be20] seq_read at ffffffff8119a0a9
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/fs/seq_file.c: 235
#10 [ffff88013a59bea0] proc_reg_read at ffffffff811dcbde
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/fs/proc/inode.c: 202
#11 [ffff88013a59bef0] vfs_read at ffffffff811782b5
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/fs/read_write.c: 295
#12 [ffff88013a59bf30] sys_read at ffffffff811783f1
/usr/src/debug/kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/fs/read_write.c: 369
#13 [ffff88013a59bf80] system_call_fastpath at ffffffff8100b072
/usr/src/debug///////kernel-2.6.32-279.19.1.el6/linux-2.6.32-279.19.1.el6_lustre_gcov.x86_64/arch/x86/kernel/entry_64.S: 489
RIP: 0000003282eda360 RSP: 00007fffaf2f4050 RFLAGS: 00010206
RAX: 0000000000000000 RBX: ffffffff8100b072 RCX: 0000000000b68030
RDX: 0000000000008000 RSI: 0000000000b60000 RDI: 0000000000000003
RBP: 0000000000b60000 R8: 000000328318dee8 R9: 0000000000000001
R10: 0000000000008fff R11: 0000000000000246 R12: ffffffffffff8000
R13: 0000000000000003 R14: 0000000000008000 R15: 0000000000000003
ORIG_RAX: 0000000000000000 CS: 0033 SS: 002b
crash> dis -l vvp_pgcache_show+263
/root/lustre-release/lustre/llite/vvp_dev.c: 420
0xffffffffa0df5ab7 <vvp_pgcache_show+263>: mov (%rdx),%rcx