LU-2940 llite: Fix for oops in vvp_pgcache_show()

Hold the lock protecting page tree (coh_page_guard) till the point the page is
being accessed.

Signed-off-by: Swapnil Pimpale <spimpale@ddn.com>
Change-Id: I9d1d5129d9cac8f1fa5eec77f554320c0c255fc2
Reviewed-on: http://review.whamcloud.com/7192
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>